fix: fix broken dark mode

--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -1,5 +1,13 @@
-html {
-    background-color: var(--un-preset-theme-colors-base);
+@media (prefers-color-scheme: light) {
+    html {
+        background-color: #eff1f5;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    html {
+        background-color: #1e1e2e;
+    }
 }
 
 body {
